--- a/static/css/assigment_1.css
+++ b/static/css/assigment_1.css
@@ -1,5 +1,5 @@
 .background{
-    background-image: url("/Users/quanganh/Desktop/git page/static/image/background_1.webp");
+    background-image: url("../image/background_1.webp");
     background-size: cover;
     background-repeat: no-repeat;
     margin: 0%;
